--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.bsj</groupId>
-  <artifactId>pica2</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>pica</artifactId>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
-  <name>pica2</name>
+  <name>pica</name>
   <url>http://maven.apache.org</url>
 
   <properties>
